# Slinkie-forums

./: .gitignore  README.md
backend/: README.md  __init__.py  api.py  database.py  example.db  pyproject.toml
backend/slinkieforumsserver/: api.py  database.py  main.py  models.py  routes.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: main.css
frontend/src/: Api.js  Api.ts  App.vue  something.vue  store.js  util.ts
frontend/src/components/: Category.vue  CommentCard.vue  Modal.vue  ReplyCard.vue  ThreadCard.vue  ThreadHeader.vue  ToggleSwitch.vue
frontend/src/router/: index.js
frontend/src/views/: ErrorView.vue  HomeView.vue  LoginView.vue  NewThreadView.vue  ThreadView.vue
mockup/: database.md  features.md
